--- a/public/styles/layout.css
+++ b/public/styles/layout.css
@@ -3,6 +3,7 @@
  * https://css-tricks.com/international-box-sizing-awareness-day/
  * Do not modify these two selectors, please
  */
+ 
 html {
   box-sizing: border-box;
 }
@@ -18,8 +19,21 @@ body {
   color: #545149;
   background-color: #f4f1ec;
   font-size: 24px;
+  font-family: Source Sans Pro, sans-serif;
+  width: 100%;
 }
-
 /*
  * Additional CSS can be defined below or in other CSS files, as per instructions
  */
+
+ /* styling the main css */
+.container {
+  background-color: #f4f1ec;
+  width: 90%;
+  margin: auto;
+  
+
+
+}
+
+
