--- a/public/styles/new-tweet.css
+++ b/public/styles/new-tweet.css
@@ -15,11 +15,14 @@
   display: flex;
   flex-direction: column;
   border-bottom: 4px solid #545149;
+  font-family: "Source Sans Pro", sans-serif;
+ 
 }
 
 .tweet-header > textarea {
+ font-family: sans-serif; 
   height: 40px;
-  color: #545149;
+  color: black;
   border: none;
   resize: none;
   outline: none;
@@ -35,7 +38,7 @@
 
 .tweet-footer > button {
   background-color: #4056A1;
-  font-size: 1em;
+  font-size: 15px;
   color: white;
   border: none;
 }
